# lr_to_rlds

./: .gitignore  .gitmodules  CLAUDE.md  README.md  main.sh  pyproject.toml  requirements.txt  setup_env.sh
.ralph/: AGENT.md  LOOP_GUIDE.md  fix_plan.md
.ralph/specs/: architecture.md  parallel_processing.md  pipeline_stages.md  requireements.md  rlds_schema.md
rlds/: __init__.py
rlds/transformations/: shape_ops.py
src/lerobot_to_rlds/: __init__.py  cli.py
src/lerobot_to_rlds/core/: __init__.py  constants.py  exceptions.py  types.py
src/lerobot_to_rlds/parallel/: __init__.py
src/lerobot_to_rlds/pipeline/: __init__.py  convert.py
src/lerobot_to_rlds/readers/: __init__.py  base.py  detector.py  v21_reader.py  v30_reader.py
src/lerobot_to_rlds/utils/: __init__.py  logging.py  naming.py
src/lerobot_to_rlds/visualization/: __init__.py  frame_viewer.py  plotter.py  visualizer.py
src/lerobot_to_rlds/writers/: __init__.py  feature_mapper.py  oxe_writer.py  rlds_writer.py
tests/: __init__.py  conftest.py
tests/fixtures/: create_fixtures.py
tests/fixtures/v21_sample/data/chunk-000/: episode_000000.parquet  episode_000001.parquet
tests/fixtures/v21_sample/meta/: episodes.jsonl  info.json
tests/fixtures/v30_sample/data/chunk-0/: episode_000000.parquet  episode_000001.parquet
tests/fixtures/v30_sample/meta/: info.json
tests/fixtures/v30_sample/meta/episodes/: episode_000000.parquet  episode_000001.parquet
tests/test_pipeline/: __init__.py
tests/test_readers/: __init__.py  test_base.py  test_detector.py  test_v21_reader.py  test_v30_reader.py
tests/test_writers/: __init__.py
